--- a/work/toward-driver/app/src/main/res/layout/fragment_main.xml
+++ b/work/toward-driver/app/src/main/res/layout/fragment_main.xml
@@ -40,6 +40,7 @@
             android:text="대기 승객"
             android:textSize="15sp"
             android:textColor="#ffffff"
+            android:textStyle="bold"
             android:drawableTop="@drawable/ic_wait_custom"
             android:padding="22dp"
             android:layout_marginRight="15dp"
@@ -49,6 +50,7 @@
             android:layout_width="160dp"
             android:layout_height="140dp"
             android:text="진행 현황"
+            android:textStyle="bold"
             android:drawableTop="@drawable/ic_ing"
             android:padding="30dp"
             android:textSize="15sp"
@@ -69,6 +71,7 @@
             android:layout_height="140dp"
             android:text="승객 목록"
             android:textSize="15sp"
+            android:textStyle="bold"
             android:drawableTop="@drawable/ic_cus_list"
             android:padding="27dp"
             android:textColor="#ffffff"
@@ -79,6 +82,7 @@
             android:layout_width="160dp"
             android:layout_height="140dp"
             android:text="승객의 소리"
+            android:textStyle="bold"
             android:drawableTop="@drawable/ic_suggestion"
             android:padding="25dp"
             android:textSize="15sp"
