--- a/work/toward-driver/app/src/main/res/layout/activity_login.xml
+++ b/work/toward-driver/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:background="@drawable/background2">
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="9sp"
-                android:text="기 사 님 용"/>
+                android:text="운 전 원 용"/>
         </LinearLayout>
 
         <LinearLayout
