--- a/work/toward-driver/app/src/main/res/layout/activity_main.xml
+++ b/work/toward-driver/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 메인 / 로그인 화면 -->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient2"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,7 +16,7 @@
         android:layout_weight="9"
         android:id="@+id/relativeLayout"/>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -22,6 +24,6 @@
         app:itemTextColor="@drawable/bottom_item_color"
         app:itemIconTint="@drawable/bottom_item_color"
         app:menu="@menu/bottommenu"
-        />
+        app:labelVisibilityMode="unlabeled"/>
 
 </LinearLayout>
