--- a/work/toward-driver/app/src/main/res/layout/fragment_main.xml
+++ b/work/toward-driver/app/src/main/res/layout/fragment_main.xml
@@ -4,18 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:layout_marginTop="50dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginLeft="20dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginRight="12dp"
+    android:layout_marginLeft="12dp"
     android:layout_marginBottom="10dp"
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="110dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/logo"
-        android:tint="#000000"
+        android:layout_width="130dp"
+        android:layout_height="115dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/logo4"
         android:layout_gravity="center"
         />
     <TextView
@@ -24,21 +23,23 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="12sp"
-        android:textColor="#000000"
+        android:textColor="#a0a0eb"
         android:text="향 해"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/drive"
             android:layout_width="160dp"
             android:layout_height="140dp"
-            android:text="대기 승객"
-            android:textSize="15sp"
+            android:text="운행"
+            android:textSize="16sp"
             android:textColor="#ffffff"
             android:textStyle="bold"
             android:drawableTop="@drawable/ic_wait_custom"
@@ -47,13 +48,14 @@
             android:background="@drawable/round_corner_button"
             />
         <Button
+            android:id="@+id/drive_process"
             android:layout_width="160dp"
             android:layout_height="140dp"
             android:text="진행 현황"
             android:textStyle="bold"
             android:drawableTop="@drawable/ic_ing"
             android:padding="30dp"
-            android:textSize="15sp"
+            android:textSize="16sp"
             android:textColor="#ffffff"
             android:background="@drawable/round_corner_button"
             />
@@ -62,40 +64,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/customer_list"
             android:layout_width="160dp"
             android:layout_height="140dp"
-            android:text="승객 목록"
-            android:textSize="15sp"
+            android:text="오늘의 승객"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:drawableTop="@drawable/ic_cus_list"
             android:padding="27dp"
             android:textColor="#ffffff"
-            android:layout_marginRight="13dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/round_corner_button"
             />
         <Button
+            android:id="@+id/customer_suggestion"
             android:layout_width="160dp"
             android:layout_height="140dp"
             android:text="승객의 소리"
             android:textStyle="bold"
             android:drawableTop="@drawable/ic_suggestion"
             android:padding="25dp"
-            android:textSize="15sp"
+            android:textSize="16sp"
             android:textColor="#ffffff"
             android:background="@drawable/round_corner_button"
             />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="문의사항 010-9102-3813"
-        android:layout_marginTop="58dp"
-        android:gravity="center"
-        android:textSize="13sp"/>
 </LinearLayout>
