--- a/work/toward-driver/app/src/main/res/values/styles.xml
+++ b/work/toward-driver/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -12,5 +11,10 @@
 
     <style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="ToolbarTitleText">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
