--- a/work/toward-user/app/src/main/res/layout/activity_login.xml
+++ b/work/toward-user/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:background="@drawable/background2">
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="320dp"
+            android:layout_height="300dp"
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center">
@@ -37,16 +37,17 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="9sp"
-                android:text="탑 승 자 용"/>
+                android:text="운 전 원 용"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2.4"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.4"
+                android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,16 +88,16 @@
                 android:inputType="textPassword"
                 android:hint="비밀번호를 입력해주세요."/>
         </LinearLayout>
-        </LinearLayout>
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
                 <Button
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:textColor="#ffffff"
+                    android:layout_gravity="end"
                     android:textStyle="bold"
                     android:id="@+id/loginBtn"
                     android:text="로그인"
@@ -112,15 +113,15 @@
             android:textColor="#757575"
             android:textSize="12sp"
             android:text="자동로그인"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="43dp"
-                android:id="@+id/registerBtn"
-                android:textColor="#ffffff"
-                android:textStyle="bold"
-                android:text="회원 등록"
-                android:backgroundTint="#4fc9c1"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="43dp"
+            android:id="@+id/registerBtn"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:text="회원 등록"
+            android:backgroundTint="#4fc9c1"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
