--- a/work/toward-user/app/src/main/res/layout/activity_main.xml
+++ b/work/toward-user/app/src/main/res/layout/activity_main.xml
@@ -1,121 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 메인 / 로그인 화면 -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient2"
+    android:layout_gravity="center"
+    android:layout_marginTop="20dp"
+    android:layout_marginRight="12dp"
+    android:layout_marginLeft="12dp"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="115dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/logo5"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="vertical">
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:textColor="#4fc9c1"
+        android:text="대기자 수  70"/>
 
-        <ImageView
-            android:layout_width="110dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/logo"
-            android:tint="#000000"
-            android:layout_gravity="center"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/wait_num"
-            android:text=" 대 기 자 수  |  7 0 "
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="5dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="160dp"
-                android:layout_height="140dp"
-                android:text="택 시 콜"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="#ffffff"
-                android:drawableTop="@drawable/ic_taxi"
-                android:padding="21dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/round_corner_button"
-                />
-            <Button
-                android:layout_width="160dp"
-                android:layout_height="140dp"
-                android:text="신청 현황"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/ic_ing"
-                android:padding="22dp"
-                android:textSize="16sp"
-                android:textColor="#ffffff"
-                android:background="@drawable/round_corner_button"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="160dp"
-                android:layout_height="140dp"
-                android:text="나의 경로"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/ic_map"
-                android:padding="23dp"
-                android:textColor="#ffffff"
-                android:layout_marginRight="13dp"
-                android:background="@drawable/round_corner_button"
-                />
-            <Button
-                android:layout_width="160dp"
-                android:layout_height="140dp"
-                android:text="건의 하기"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/ic_mesg"
-                android:padding="23dp"
-                android:textSize="16sp"
-                android:textColor="#ffffff"
-                android:background="@drawable/round_corner_button"
-                />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="문의사항 010-6357-5824"
-            android:layout_marginTop="70dp"
-            android:gravity="center"
-            android:textSize="13sp"/>
-    </LinearLayout>
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/relativeLayout"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/drive"
+            android:layout_width="160dp"
+            android:layout_height="140dp"
+            android:text="택 시 콜"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:drawableTop="@drawable/ic_taxi"
+            android:padding="22dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/round_corner_button"
+            />
+        <Button
+            android:id="@+id/drive_process"
+            android:layout_width="160dp"
+            android:layout_height="140dp"
+            android:text="신청 현황"
+            android:textStyle="bold"
+            android:drawableTop="@drawable/ic_ing"
+            android:padding="22dp"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:background="@drawable/round_corner_button"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/customer_list"
+            android:layout_width="160dp"
+            android:layout_height="140dp"
+            android:text="나의 경로"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:drawableTop="@drawable/ic_map"
+            android:padding="27dp"
+            android:textColor="#ffffff"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/round_corner_button"
+            />
+        <Button
+            android:id="@+id/customer_suggestion"
+            android:layout_width="160dp"
+            android:layout_height="140dp"
+            android:text="건의 하기"
+            android:textStyle="bold"
+            android:drawableTop="@drawable/ic_mesg"
+            android:padding="25dp"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:background="@drawable/round_corner_button"
+            />
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="문의사항 010-6357-5824"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:textSize="13sp"/>
 
 </LinearLayout>
